--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
-    "start": "strapi develop",
+    "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
