--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
+    "@retikolo/drag-drop-content-types": "^1.2.1",
     "@strapi/plugin-documentation": "^4.2.2",
     "@strapi/plugin-graphql": "^4.2.2",
     "@strapi/plugin-i18n": "4.2.2",
@@ -19,7 +21,8 @@
     "@strapi/strapi": "4.2.2",
     "better-sqlite3": "7.4.6",
     "pg": "^8.7.3",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "strapi-plugin-local-image-sharp": "^1.2.1"
   },
   "author": {
     "name": "A Strapi developer"
